# slam-visual_markers

./: CMakeLists.txt  IGraphichAlgorithmer.h  Readme.md  ardrone_slam.glade  ardronedefines.h  cam_autoloc.cfg  cam_autoloc.cfg~  cam_autoloc.pro  cam_autoloc.pro.user.ead192c.2.5pre1  cameramanager.cpp  cameramanager.h  drawingutils.cpp  drawingutils.h  drawworld.h  geometryutils.h  installation.sh  kalmanfilter.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  markers.txt  pose3di.h  sensors.cpp  sensors.h  sharer.cpp  sim_calib.yml  threadgui.cpp  threadgui.h  threadsensors.h  uav_viewer.cfg  uav_viewer.cfg~  web_camera.yml  weightedaveragefilter.cpp  world.h
AprilTags/april_tags/: common.h  image_u8.h
algorithm/: cameramanager.cpp  cameramanager.h  drawingutils.cpp  drawingutils.h  drawworld.cpp  geometryutils.cpp  kalmanfilter.cpp  kalmanfilter.h  markerinfo.cpp  markerinfo.h  numMarkerPublisherROS.cpp  numMarkerPublisherROS.h  pose3di.cpp  rosPublisher.cpp  rosPublisher.h  sharer.cpp  sharer.h  timerPublisherROS.cpp  timerPublisherROS.h  weightedaveragefilter.cpp  weightedaveragefilter.h  world.cpp
april_tags/: apriltag.h  matd.h  timeprofile.h
gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  threadgui.cpp  threadgui.h
resources/: .drone.cfg.swp  configuration.cfg  configuration.yml  drone.cfg  drone.cfg.save  markers.txt  object.txt  sim_calib.yml
sensors/: sensors.cpp  sensors.h  threadsensors.cpp  threadsensors.h
src/: main.cpp
